# keshro-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: publish.yml  socket.yml
src/keshro_mcp/: __init__.py  client.py  config.py  server.py
