[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "keshro-mcp"
version = "0.1.0"
description = "MCP server for Keshro Migration Projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "mcp>=1.6.0",
  "pydantic>=2.7",
]

[project.scripts]
keshro-mcp = "keshro_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keshro_mcp"]
