[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "keshro-mcp"
version = "0.1.17"
description = "High-stakes engineering project execution for AI agents — MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Josh Lewittes", email = "josh.lewittes@gmail.com"}]
keywords = ["ai-agents", "execution", "planning", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "mcp>=1.6.0",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://keshro.com"
Repository = "https://github.com/jlewitt1/keshro-mcp"
Documentation = "https://keshro.com/developers"

[project.scripts]
keshro-mcp = "keshro_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keshro_mcp"]
